--- a/public/assets/styles/styles.css
+++ b/public/assets/styles/styles.css
@@ -9,4 +9,17 @@
   opacity: 95%;
 }
 
+.vh-90 {
+  height: 90vh;
+}
+
+.vh-60 {
+  height: 60vh;
+}
+
+.shadow-lgAllround {
+  box-shadow: 5px 5px 15px 3px rgba(0, 0, 0, 0.1),
+    0 4px 6px -2px rgba(0, 0, 0, 0.05);
+}
+
 @tailwind utilities;
